Continue salvage and rewrite HangmanApp